--- a/packages/samsara-bus-react/examples/chat/index.html
+++ b/packages/samsara-bus-react/examples/chat/index.html
@@ -1,9 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Samsara Bus React - Chat Example</title>
+    <title>Samsara Bus React - Fluent API Demo</title>
   </head>
   <body>
     <div id="root"></div>
